# abxbus

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  test_go.yaml  test_rust.yaml
abxbus/: __init__.py  base_event.py  bridge_websocket.py  bridges.py  event_bus.py  helpers.py  jsonschema.py  logging.py  retry.py
abxbus-go/: README.md  base_event.go  event_handler.go  go.mod  lock_manager.go  typed.go  version.go
abxbus-go/jsonschema/: jsonschema.go  jsonschema_test.go
abxbus-go/tests/: base_event_test.go  comprehensive_patterns_test.go  cross_runtime_roundtrip_test.go  event_handler_first_test.go  event_handler_test.go  event_result_test.go  eventbus_cross_runtime_features_test.go  eventbus_debounce_test.go  eventbus_dispatch_contextvars_test.go  eventbus_dispatch_defaults_test.go  eventbus_dispatch_parent_tracking_test.go  eventbus_error_handling_test.go  eventbus_find_test.go  eventbus_forwarding_test.go  eventbus_locking_test.go  eventbus_log_tree_test.go  eventbus_on_off_test.go  eventbus_performance_test.go  eventbus_serialization_test.go  eventbus_test.go  eventbus_timeout_test.go  lock_manager_test.go
abxbus-go/tests/roundtrip_cli/: main.go
abxbus-rust/: Cargo.toml
abxbus-rust/src/: jsonschema.rs  retry.rs  typed.rs
abxbus-rust/tests/: test_comprehensive_patterns.rs  test_event_result.rs  test_eventbus.rs  test_eventbus_locking.rs
abxbus-ts/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
abxbus-ts/src/: BaseEvent.ts  LockManager.ts  WebSocketEventBridge.ts  events_suck.ts  index.ts  jsonschema.ts  retry.ts  types.ts
abxbus-ts/tests/: BaseEvent.test.ts  EventBus_find.test.ts  EventBus_locking.test.ts  EventBus_serialization.test.ts  EventBus_timeout.test.ts  EventHandler.test.ts  EventResult.test.ts  type_inference.test.ts
docs/: index.mdx  quickstart.mdx
docs/api/: retry.mdx
docs/concurrency/: events-bus-serial.mdx  events-global-serial.mdx  events-parallel.mdx  handler-completion-all.mdx  handler-completion-first.mdx  handlers-parallel.mdx  handlers-serial.mdx
docs/features/: async-sync-handlers.mdx  context-propagation.mdx  event-pattern-matching.mdx  fifo-processing.mdx  forwarding-between-buses.mdx  parent-child-tracking.mdx
docs/operations/: supported-runtimes.mdx
skills/abxbus/: SKILL.md
tests/: test_cross_runtime_roundtrip.py  test_event_result.py  test_eventbus.py  test_eventbus_forwarding.py  test_eventbus_locking.py  test_eventbus_timeout.py
