[package]
name = "abxbus"
version = "2.5.13"
edition = "2021"
license = "MIT"
description = "Rust implementation of the abxbus Event Bus library"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
uuid = { version = "1.23.1", features = ["v4", "v5", "v7", "serde"] }
futures = { version = "0.3.32", features = ["executor", "thread-pool"] }
futures-timer = "3.0.3"
event-listener = "5.4.1"
parking_lot = "0.12.5"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
dcontext = "0.7.1"
regex = "1.11.1"
libc = "0.2"
sha2 = "0.10"
paste = "1.0"

[dev-dependencies]
